<resources>
    <string name="app_name">Heb ik alles?</string>
    <string name="back_btn">Terug</string>
    <string name="add_btn">Toevoegen</string>
    <string name="monday_btn">Maandag</string>
    <string name="tuesday_btn">Dinsdag</string>
    <string name="wednesday_btn">Woensdag</string>
    <string name="thursday_btn">Donderdag</string>
    <string name="friday_btn">Vrijdag</string>
    <string name="saturday_btn">Zaterdag</string>
    <string name="sunday_btn">Zondag</string>

    <array name="monday_items">
        <item>Laptop</item>
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
        <item>Muis</item>
    </array>
    <array name="tuesday_items">
        <item>Laptop</item>
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
        <item>Muis</item>
    </array>
    <array name="wednesday_items">
        <item>Laptop</item>
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
        <item>Muis</item>
    </array>
    <array name="thursday_items">
        <item>Laptop</item>
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
        <item>Muis</item>
    </array>
    <array name="friday_items">
        <item>Laptop</item>
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
        <item>Muis</item>
    </array>
    <array name="saturday_items">
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
    </array>
    <array name="sunday_items">
        <item>Thee</item>
        <item>Telefoon</item>
        <item>Koptelefoon</item>
    </array>
</resources>
