<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#373737"
        android:gravity="center"
        android:isScrollContainer="true"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="7"
        app:barrierAllowsGoneWidgets="true"
        app:chainUseRtl="true"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="wrap"
        app:layout_constraintHeight_min="wrap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <Button
            android:id="@+id/monday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#660066"
            android:text="@string/monday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/tuesday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#8C264D"
            android:text="@string/tuesday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/wednesday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B34D34"
            android:text="@string/wednesday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/thursday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#D87319"
            android:text="@string/thursday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/friday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FE9900"
            android:text="@string/friday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/saturday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFB800"
            android:text="@string/saturday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/sunday_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFD600"
            android:text="@string/sunday_btn"
            android:textColor="@color/textColor"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>