<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Friday">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#373737"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fridayColor"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:weightSum="4">

            <Button
                android:id="@+id/friday_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#373737"
                android:fadingEdge="horizontal|vertical"
                android:text="@string/back_btn"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/friday_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/friday_btn"
                android:textColor="@color/textColor" />

            <!--            <Button-->
                android:id="@+id/friday_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#373737"
                android:text="@string/add_btn"
                android:textColor="@color/textColor" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <CheckedTextView
                android:id="@+id/checkedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            -->

<!--            <ListView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="@color/fridayColor"-->
<!--                android:entries="@array/friday_items"-->
<!--                android:onClick="colorChange"-->
<!--                />-->
<!--        </LinearLayout>-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>